finish examples, add favicon and configure titles

--- a/pages/portfolio/projects/rusle.mdx
+++ b/pages/portfolio/projects/rusle.mdx
@@ -1,5 +1,6 @@
 import ImageGallery from "react-image-gallery";
 import { ImgComparisonSlider } from "@img-comparison-slider/react";
+import { Steps } from 'nextra/components'
 
 export const images = [
   {
@@ -64,6 +65,8 @@ export const images = [
   slideDuration={0}
 />
 
+<Steps>
+
 ### Calculate the LS Factor
 
 ![Flow Direction](/portfolio/projects/rusle/ls_fac/ls_flow.png)
@@ -122,3 +125,5 @@ export const images = [
     src="/geovis-portfolio/portfolio/projects/rusle/rusle_stretch.png"
   />
 </ImgComparisonSlider>
+
+</Steps>
