--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,7 +1,12 @@
+---
+title: Geovisualization - WS 2024/25
+---
+
 import Image from "next/image";
 import Link from "next/link";
 import styles from "../styles/page.module.css";
 import { ArrowRightIcon } from "@heroicons/react/20/solid";
+
 
 export default function IndexPage() {
   return (
