--- a/pages/portfolio/introduction.mdx
+++ b/pages/portfolio/introduction.mdx
@@ -1,4 +1,4 @@
-# Geovisualization
+# Introduction
 
 This is my portfolio for the Geovisualization course at the University of Trier. Here you can find all the projects I have worked on during the semester.
 
